--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@prisma/client": "^6.2.1",
     "@quixo3/prisma-session-store": "^3.1.13",
+    "@types/cookie-parser": "^1.4.8",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
