added more tests

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "deploy": "npm run build && npm run start",
     "lint": "eslint src/**/*.{ts,tsx}",
     "lint:fix": "eslint src/**/*.{ts,tsx} --fix",
-    "test": "jest"
+    "test": "jest --runInBand"
   },
   "keywords": [],
   "author": "",
