--- a/frontend/app.json
+++ b/frontend/app.json
@@ -45,6 +45,9 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "API_BASE_URL": "http://localhost:5000/api/"
     }
   }
 }
